--- a/index.css
+++ b/index.css
@@ -79,11 +79,12 @@
 /* ********************************************************************** */
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+  object-fit: cover;
 }
 
 /* Add some content at the bottom of the video/page */
@@ -91,7 +92,7 @@
   position: fixed;
   left: 0%;
   bottom: 0;
-  background: rgba(62, 5, 5, 0.9);
+  background: rgba(29, 27, 27, 0.9);
   color: #f1f1f1;
   width: 100%;
   padding: 20px;
